# jeronimo

./: ProjectHome.md
documents/thesis/: Capitulo_4.lyx  Capitulo_4.tex  thesis.lyx  thesis_LO_QT.lyx
documents/thesis/SIBGRAPI2013/: Final_TQLBO.tex  TQLBO.tex  template.bib
documents/thesis/SIPAIM2010/: FASIPAIM2010.tex  FASIPAIM2010.tps
documents/thesis/SIPAIM2011/: listado_inicial.bib
documents/thesis/TQLBO-paper/: Laplacian_Subdivision_Surfaces.lyx  Reviews.docx  template.bib
documents/thesis/bibliografia/: Lista_Extraccion_Esqueleto_BibTex.bib  listado_inicial.bib
documents/thesis/proposal/: ProblemDefinition.docx
documents/thesis/propuesta/: Cronograma.xlsx  EVALUACIÓN PROPUESTA.docx  Formato concepto motivado.docx  PROPUESTA.doc  Propuesta.lyx
documents/thesis/resources/: HojaTituloMSc.tex
documents/thesis/survey/: survey.lyx
sjSkeletonizer-0.1.0/: CMakeLists.txt  sjConfig.h  sjMainWindow.ui  sjViewer.cpp
sjSkeletonizer-0.2.0/: sjMain.cpp
sjSkeletonizer-0.2.0/include/: sjDataIO.h  sjDataType.h  sjLaplacianSmoothing.h
sjSkeletonizer-0.3.0/: CMakeLists.txt
sjSkeletonizer-0.3.0/CMakeModules/: sjInstallFiles.cmake
sjSkeletonizer-0.3.0/include/: sjDataIO.h  sjLaplacianSmoothing.h  sjViewer.h
sjSkeletonizer-0.3.0/src/: sjApplication.cpp  sjUtils.cpp
sjSkeletonizer-0.3.1/include/: sjLaplacianSmoothing.h
sjSkeletonizer-0.3.1/src/: CMakeLists.txt  sjLaplacianSmoothing.cpp
software/laplace_operator/: LaplacianEditing3D.m  get_mesh_constraint.m  harmonic_field.m  quad_remesh.asv  skeletonizer_user.m  test_edit3d.m  test_harmonic_field.m
software/laplace_operator/toolbox_graph/: compute_mesh_weight.m  plot_mesh.m
software/sjSkeletonizer/: CMakeLists.txt  sjMain.cpp  sjViewer.cpp  sjViewer_moc.cpp_parameters
software/sjSkeletonizer/CMakeModules/: sjMacro.cmake
software/sjSkeletonizer/include/: sjConfig.h  sjDataType.h  sjLaplacianSmoothing.h  sjUtils.h  sjViewer.h
software/sjSkeletonizer/laplacian_plugin/: CMakeLists.txt  sjLaplacianSmoothing.cpp  sjLaplacianSmoothing.h
software/sjSkeletonizer/source/: CMakeLists.txt
software/sjSkeletonizer/source/core/: sjExternalServer.cpp  sjKernelPlugin.cpp  sjKernelPlugin.h  sjPlugin.h  sjState.h  sjStateContext.cpp  sjStateContext.h  sjSystem.h
software/sjSkeletonizer/source/exception/: sjException.cpp  sjException.h
software/sjSkeletonizer/source/gui/: sjApplication.cpp  sjApplication.h  sjMain.cpp  sjPluginWidget.cpp  sjPluginWidget.h  sjViewer.cpp  sjViewer.h
software/sjSkeletonizer/source/io/: sjDataIO.h  sjDataType.h
software/sjSkeletonizer/source/log/: sjLog.cpp  sjLog.h
software/sjSkeletonizer/source/parameters/: sjParameter.cpp  sjParameter.h
software/sjSkeletonizer/source/plugin/: sjCoreSmoothing.cpp  sjCoreSmoothing.h  sjGraphSkeleton.h  sjKernelEngine.h  sjKernelPlugin.cpp  sjLaplacianSmoothing.cpp  sjLaplacianSmoothing.h  sjMeanCurvatureSmoothing.cpp  sjMeanCurvatureSmoothing.h  sjMeshContractionAu2008.cpp  sjMeshContractionAu2008.h  sjMeshFilter.h  sjMeshFilterServer.h  sjPlugin.cpp  sjPlugin.h  sjPluginXmlLoader.cpp  sjRefinement.cpp  sjRefinement.h  sjSimplificator.cpp  sjSimplificator.h
software/sjSkeletonizer/source/resources/: logs.properties
software/sjSkeletonizer/source/system/: sjPluginLoader.cpp  sjPluginLoader.h  sjPluginXmlLoader.cpp  sjPluginXmlLoader.h
software/sjSkeletonizer/source/utils/: sjObserver.cpp  sjObserver.h  sjPipeFilter.cpp  sjPipeFilter.h  sjUtils.h
software/sjSkeletonizer/source/xml/: sjXml.cpp
software/sjSkeletonizer/src/: CMakeLists.txt  sjApplication.cpp  sjLaplacianSmoothing.cpp  sjUtils.cpp  sjViewer.cpp
software/sjSkeletonizer/test/: CMakeLists.txt  sjTestCgalOpenNL.cpp  sjTestParameters.cpp  sjTestPlugin.cpp
tags/software/sjSkeletonizer-0.1.0/: sjMain.cpp  sjViewerUI.ui
tags/software/sjSkeletonizer-0.2.0/: sjViewer.h
trunk/documents/thesis/: Capitulo_5.lyx  Capitulo_5.tex  thesis.lyx  thesis_LO_QT.lyx  thesis_LO_QT.tex
trunk/software/laplace_operator/: LaplacianEditing3D.m  skeletonizer.asv  skeletonizer.m  skeletonizer_user.m  test_edit3d.m  (+1 more)
trunk/software/sjSkeletonizer/: CMakeLists.txt  sjMain.cpp  sjViewer.cpp  sjViewer.h  sjViewerUI.ui  sjViewer_moc.cpp_parameters
trunk/software/sjSkeletonizer/include/: sjApplication.h  sjDataType.h  sjLaplacianSmoothing.h  sjUtils.h  sjViewer.h
trunk/software/sjSkeletonizer/laplacian_plugin/: CMakeLists.txt  sjLaplacianSmoothing2.cpp
trunk/software/sjSkeletonizer/source/: CMakeLists.txt
trunk/software/sjSkeletonizer/source/core/: sjExternalServer.h  sjKernelPlugin.cpp  sjKernelPlugin.h  sjPlugin.cpp  sjPlugin.h  sjState.cpp  sjState.h  sjStateContext.cpp  sjStateContext.h
trunk/software/sjSkeletonizer/source/exception/: sjException.h
trunk/software/sjSkeletonizer/source/gui/: sjApplication.cpp  sjApplication.h  sjPluginWidget.cpp  sjPluginWidget.h  sjViewer.cpp  sjViewer.h
trunk/software/sjSkeletonizer/source/io/: sjDataType.h
trunk/software/sjSkeletonizer/source/log/: sjLog.cpp  sjLog.h
trunk/software/sjSkeletonizer/source/parameters/: sjParameter.cpp  sjParameter.h
trunk/software/sjSkeletonizer/source/plugin/: sjCoreSmoothing.h  sjEngine.h  sjGraphSkeleton.h  sjKernelEngine.cpp  sjKernelPlugin.h  sjLaplacianSmoothing.cpp  sjLaplacianSmoothing.h  sjMeanCurvatureSmoothing.cpp  sjMeanCurvatureSmoothing.h  sjMeshContractionAu2008.cpp  sjMeshContractionAu2008.h  sjPluginLoader.h  sjPluginXmlLoader.h  sjRefinement.cpp  sjRefinement.h  sjSimplificator.cpp  sjSimplificator.h
trunk/software/sjSkeletonizer/source/resources/: example1.xml  plugin.dtd
trunk/software/sjSkeletonizer/source/system/: sjPluginXmlLoader.cpp  sjPluginXmlLoader.h
trunk/software/sjSkeletonizer/source/utils/: sjObserver.cpp  sjObserver.h  sjPipeFilter.cpp  sjPipeFilter.h  sjUtils.cpp  sjUtils.h
trunk/software/sjSkeletonizer/source/xml/: sjXml.h
trunk/software/sjSkeletonizer/src/: sjApplication.cpp  sjDataIO.cpp  sjLaplacianSmoothing.cpp  sjMain.cpp  sjUtils.cpp  sjViewer.cpp
trunk/software/sjSkeletonizer/test/: CMakeLists.txt  sjTestParameters.cpp  sjTestPlugin.cpp
(+144 files in other folders)
