PROJECT(sjViewer)

CMAKE_MINIMUM_REQUIRED(VERSION 2.4.5)

SET(CMAKE_ALLOW_LOOSE_LOOP_CONSTRUCTS true)

IF ( COMMAND cmake_policy )
  cmake_policy( SET CMP0003 NEW )  
ENDIF()

FIND_PACKAGE(CGAL QUIET REQUIRED COMPONENTS Core Qt4)
INCLUDE( ${CGAL_USE_FILE} )

SET( QT_USE_QTXML    TRUE )
SET( QT_USE_QTMAIN   TRUE )
SET( QT_USE_QTSCRIPT  TRUE )
SET( QT_USE_QTOPENGL  TRUE )

FIND_PACKAGE(Qt4 REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)
	
IF(QT4_FOUND)
	INCLUDE(${QT_USE_FILE})
	FIND_PACKAGE(QGLViewer REQUIRED)
ENDIF(QT4_FOUND)

IF (MSVC)
	# Use /FR to turn on IntelliSense
	SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /FR")
ENDIF()

IF(CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)



	#qt4_wrap_ui( UI_FILES sjViewerUI.ui )
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	INCLUDE(AddFileDependencies)
	INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR})

	qt4_generate_moc( "${CMAKE_CURRENT_SOURCE_DIR}/sjViewer.h" sjViewer_moc.cpp )
	add_file_dependencies( sjViewer_moc.cpp "${CMAKE_CURRENT_SOURCE_DIR}/sjViewer.h" )
	
	#SET(QtApp_RCC_SRCS sjviewer.qrc)

	#QT4_ADD_RESOURCES(QtApp_RCC_SRCS ${QtApp_RCC_SRCS})

	
	SET(sjviewer_SOURCE
		sjMain.cpp
		sjViewer.h
		sjViewer.cpp
		sjViewer_moc.cpp
		sjConfig.h
	)
	

   #ADD_EXECUTABLE ( sjViewer ${sjviewer_SOURCE} ${UI_FILES} ${QtApp_RCC_SRCS})
ADD_EXECUTABLE ( sjViewer ${sjviewer_SOURCE} )

  TARGET_LINK_LIBRARIES ( sjViewer 
	${QT_LIBRARIES} 
	${CGAL_LIBRARIES} 
	${CGAL_3RD_PARTY_LIBRARIES} 
	${QGLVIEWER_LIBRARIES} 
	${OPENGL_gl_LIBRARY} 
	${OPENGL_glu_LIBRARY} )

	add_to_cached_list( CGAL_EXECUTABLE_TARGETS qtviewer )

ELSE (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)
    message(STATUS "THE REQUIRED LIBRARIES ARE NOT PRESENT.")
ENDIF (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)

