IF(CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)

	IF(WIN32)
	  ADD_DEFINITIONS(-DPLUGINLAPLACE_EXPORTS)	  
	ENDIF(WIN32)

	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/exception)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/io)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/log)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/parameters)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/core)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/utils)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/xml)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/gui)
	INCLUDE_DIRECTORIES (${CMAKE_SOURCE_DIR}/source/system)
	
	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern/OGF)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern/log4cplus/include)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern/libxml2/include)
	INCLUDE(AddFileDependencies)
	INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${TAUCS_INCLUDE_DIR})
	
	
	ADD_LIBRARY( pluginLaplacian SHARED
	sjLaplacianSmoothing.h
	sjLaplacianSmoothing.cpp )
	TARGET_LINK_LIBRARIES ( pluginLaplacian 
		basic
		math
		utils
		core
		system
		io
		parameters
		${CGAL_LIBRARIES} 
		${CGAL_3RD_PARTY_LIBRARIES} 
		${TAUCS_LIBRARIES_DIR}/libtaucs) 

ELSE (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)
    message(STATUS "THE REQUIRED LIBRARIES ARE NOT PRESENT.")
ENDIF (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)