IF(CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)

	INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern)
	INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/extern/OGF)
	INCLUDE_DIRECTORIES(${QGLVIEWER_INCLUDE_DIR})
	INCLUDE_DIRECTORIES(${TAUCS_INCLUDE_DIR})
	
	SET(sjtestcgalopennl_SOURCE
		sjTestCgalOpenNL.cpp
	)
	
	ADD_EXECUTABLE ( sjTestCgalOpenNL ${sjtestcgalopennl_SOURCE} )

	TARGET_LINK_LIBRARIES ( sjTestCgalOpenNL
		basic
		math
		${QT_LIBRARIES} 
		${CGAL_LIBRARIES} 
		${CGAL_3RD_PARTY_LIBRARIES} 
		${QGLVIEWER_LIBRARIES} 
		${OPENGL_gl_LIBRARY} 
		${OPENGL_glu_LIBRARY} 
		${TAUCS_LIBRARIES_DIR}/libtaucs
	)

ELSE (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)
    message(STATUS "THE REQUIRED LIBRARIES ARE NOT PRESENT.")
ENDIF (CGAL_Qt4_FOUND AND QT4_FOUND AND OPENGL_FOUND AND QGLVIEWER_FOUND)